fix: dropdown menu position to be visible in viewport

--- a/src/app/modules/workspace/left-menu/left-menu.component.scss
+++ b/src/app/modules/workspace/left-menu/left-menu.component.scss
@@ -237,10 +237,8 @@
 
 .lm__dropdown {
     position: absolute;
-    bottom: 8px;
-    left: 0;
-
-    transform: translate(50%, 100%);
+    bottom: 10px;
+    right: 0;
 }
 
 // svg positions | sizes
