--- a/src/app/shared/ui-components/menu-dropdown/menu-dropdown.component.scss
+++ b/src/app/shared/ui-components/menu-dropdown/menu-dropdown.component.scss
@@ -4,7 +4,22 @@
     z-index: 1000;
 }
 
+.dropdown__wrapper{
+    position: relative;
+
+    transform: translate(50%, 50%);
+    width: 200vw;
+    height: 200vh;
+
+    cursor: default;
+}
+
 .menu {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+
     width: 250px;
     padding: 4px 0;
 
@@ -13,8 +28,6 @@
     box-shadow: 0 1px 8px 0 rgb(0 0 0 / 8%);
 
     background-color: #fff;
-
-    cursor: default;
 }
 
 .item {
