--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,8 @@ body {
 
     display: flex;
     flex-direction: column;
+
+    overflow: hidden;
 }
 
 a {
